# wavelet_processor

./: .gitignore  CMakeLists.txt  readme.md
data/: lena.avif
data/processed/: results.csv
include/: transformer.h  utils.h
src/: main.cpp  transformer.cpp  utils.cpp
